# plutus-tx-template

./: CHANGELOG.md  CODEOWNERS.md  CONTRIBUTING.md  DESCRIPTION.md  README.md  always-fail.json  cabal.local  cabal.project  escrow.cabal  flake.nix  plinth-template.cabal  plutus-tx-template.cabal
.devcontainer/: devcontainer.json
.github/workflows/: build-devcontainer.yml  bump-plutus-version.yml  ci.yml  update-flake-lock.yml
app/: 1. Start here readme.md  2. Explanation of haskell language extentions.md  3. Module name and import section.md  4. Data and types of Haskell.md  5. Functions and helper functions.md  5. a) highestBidderGetsAsset .md  5. b) sellerGetsHighestBid.md  5. c) refundsPreviousHighestBid.md_  5. d) correctNewDatum.md  AuctionValidator.hs  GenAlwaysFailBlueprint.hs  GenAuctionValidatorBlueprint.hs  GenMintingPolicyBlueprint.hs  QUICKSTART.md  plutus-tx-template.cabal
nix/: outputs.nix  project.nix  shell.nix
src/: AlwaysFail.hs
src/Contract/: Escrow.hs
tests/: Spec.hs
tests/Spec/: Escrow.hs
