cabal-version:   3.0
name:            plutus-tx-template
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options: -Wall
  default-language: Haskell2010

library scripts
  import:         options
  hs-source-dirs: src
  exposed-modules:
    AuctionMintingPolicy
    AuctionValidator

  build-depends:
    , base
    , plutus-core ^>=1.34.1.0
    , plutus-ledger-api ^>=1.34.1.0
    , plutus-tx ^>=1.34.1.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

executable gen-auction-validator-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenAuctionValidatorBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.34.1.0
    , plutus-ledger-api ^>=1.34.1.0
    , plutus-tx ^>=1.34.1.0
    , plutus-tx-plugin ^>=1.34.1.0
    , scripts

executable gen-minting-policy-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenMintingPolicyBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.34.1.0
    , plutus-ledger-api ^>=1.34.1.0
    , plutus-tx ^>=1.34.1.0
    , plutus-tx-plugin ^>=1.34.1.0
    , scripts
